--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "parcel build index.html --public-url ./",
     "test": "jest --watch --env='jsdom'",
     "test-once": "jest --verbose --coverage --env='jsdom'"
-    },
-  
+  },
   "author": "Israel Antezana R.",
   "license": "ISC",
   "devDependencies": {
@@ -17,6 +16,10 @@
     "@babel/preset-env": "^7.16.8",
     "babel-jest": "^27.4.6",
     "jest": "^27.4.7",
+    "nodemon": "^2.0.16",
     "parcel": "^2.2.0"
+  },
+  "dependencies": {
+    "mongoose": "^6.3.4"
   }
 }
